@@ -11,6 +11,7 @@ spidertron-enhancements-enter-vehicles=Depends on mod settings and whether you a
 [mod-setting-name]
 spidertron-enhancements-enter-entity-base-game=Enable standard control __CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__ to enter/leave vehicles from a spidertron
 spidertron-enhancements-enter-entity-custom=Enable custom control __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-enter-vehicles____CONTROL_STYLE_END__ to enter/leave vehicles from a spidertron
+spidertron-enhancements-show-spider-on-entity=EXPERIMENTAL: Show spidertron on entity whilst you are inside of it
 spidertron-enhancements-enter-player=Enable __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-enter-vehicles____CONTROL_STYLE_END__ to quickly exit (and re-enter) a spidertron
 spidertron-enhancements-auto-sort-inventory=Automatically sort spidertron inventories
 spidertron-enhancements-spill-on-death=Spill spidertron's items onto ground upon death
@@ -19,3 +20,7 @@ spidertron-enhancements-spill-on-death=Spill spidertron's items onto ground upon
 [mod-setting-description]
 spidertron-enhancements-enter-entity-base-game=Overrides the default behaviour for __CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__ when riding a spidertron near a vehicle.
 spidertron-enhancements-enter-entity-custom=Behaves more reliably than __CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__.
+spidertron-enhancements-show-spider-on-entity=This setting may be unstable. Enable at your own risk and ensure that you are autosaving regularly.\nIt will look better future updates.
+
+[entity-name]
+spidertron-enhancements-dummy-spidertron=Travelling Spidertron
